Fixing link contrast on dark theme

--- a/_css/components/nav.css
+++ b/_css/components/nav.css
@@ -21,6 +21,9 @@
 }
 
 @media (prefers-color-scheme: dark) {
+  .nav-link {
+    @apply text-teal-500;
+  }
   .nav-link:hover,
   .nav-link:focus,
   .nav-link.active {
